fixed the overflow y problem

--- a/style.css
+++ b/style.css
@@ -40,7 +40,7 @@ body {
   align-items: center;
   justify-content: center;
   width: 400px;
-  margin-top: -15px;
+  margin-top: -45px;
   transform: translateY(-100%);
   transition: transform 0.5s ease-in;
 }
